--- a/css/style.css
+++ b/css/style.css
@@ -298,14 +298,14 @@ footer {
     outline: none;
     width: 200px;
     height: auto; }
-  .product_intro form .button3 {
+  .product_intro .button3 {
     padding: 10px 15px;
     border: none;
     position: absolute;
     bottom: 35px;
     right: 0px;
     margin-right: 0px; }
-    .product_intro form .button3 h3 {
+    .product_intro .button3 h3 {
       font-size: 25px; }
 
 .product_grid {
@@ -606,7 +606,8 @@ footer {
         font-weight: 600;
         font-size: 30px;
         color: #262522;
-        padding: 25% 20px; }
+        padding: 29% 20px;
+        height: 30px; }
     .cart-items .cart-row span {
       font-family: 'Montserrat', sans-serif;
       font-weight: 600;
@@ -640,7 +641,7 @@ footer {
         background-color: #262522;
         color: #dfa821; }
 
-.basket_pay {
+.cart-total {
   width: 30%;
   margin-right: 10%;
   margin-left: auto;
@@ -648,20 +649,20 @@ footer {
   flex-direction: column;
   justify-content: flex-end;
   margin-bottom: 30px; }
-  .basket_pay div {
+  .cart-total div {
     width: 100%;
     text-align: right;
     margin-bottom: 10px; }
-    .basket_pay div h2 {
+    .cart-total div h2 {
       font-size: 30px;
       display: inline-block;
       margin-right: 10px; }
-    .basket_pay div p {
+    .cart-total div p {
       display: inline-block; }
-    .basket_pay div button {
+    .cart-total div button {
       margin-right: 0px;
       margin-bottom: 20px; }
-  .basket_pay .total_price {
+  .cart-total .total_price {
     margin-top: 20px; }
 
 @media (max-width: 900px) {
@@ -703,8 +704,8 @@ footer {
       margin-bottom: 50px; }
       .product_intro form .size {
         bottom: -20px; }
-      .product_intro form .button3 {
-        bottom: -85px; }
+    .product_intro .button3 {
+      bottom: -85px; }
 
   .product_grid {
     display: flex;
@@ -725,7 +726,20 @@ footer {
     flex-direction: column;
     align-items: flex-start; }
     .product_page #myBtnContainer {
-      margin-top: 15px; } }
+      margin-top: 15px; }
+
+  .cart-items {
+    height: 300px; }
+    .cart-items .cart-row .cart-item span {
+      width: auto;
+      height: auto;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 600;
+      font-size: 25px;
+      color: #262522;
+      padding: 25% 20px; }
+    .cart-items .cart-row .cart-price {
+      font-size: 25px; } }
 @media (max-width: 650px) {
   #logo_header {
     display: block;
@@ -862,7 +876,7 @@ footer {
     .product_intro form .size {
       bottom: -50px;
       right: 0px; }
-    .product_intro form .button3 {
+    .product_intro .button3 {
       bottom: -125px;
       right: 0px; }
 
@@ -881,12 +895,25 @@ footer {
   .video {
     width: 100%;
     margin: 15px 0px;
-    padding: 0px; }
+    padding: 0px;
+    height: 250px; }
+    .video .video_border {
+      height: 250px; }
+
+  iframe {
+    height: 100%; }
 
   .about_text {
     width: 90%;
     margin: auto;
     display: block; }
+    .about_text .about_border {
+      position: relative;
+      border: none;
+      padding-right: 0px; }
+    .about_text .about_border:after {
+      border: none;
+      position: relative; }
     .about_text div .about_main {
       font-size: 20px; }
     .about_text div .about_quote {
@@ -895,11 +922,59 @@ footer {
   .contact {
     width: 90%; }
     .contact img {
-      width: 50px; }
+      width: 40px; }
+    .contact a {
+      font-size: 15px; }
+    .contact .contact_fb {
+      display: block;
+      margin-right: 0px;
+      margin-left: auto; }
 
   .product_page {
     margin-top: 20px; }
     .product_page #products_h1 {
       font-size: 45px; }
     .product_page #myBtnContainer {
-      display: none; } }
+      display: none; }
+
+  .cart-items {
+    height: auto; }
+    .cart-items .cart-row {
+      flex-direction: column;
+      justify-content: space-around;
+      width: 100%;
+      align-items: center; }
+      .cart-items .cart-row .cart-item {
+        display: flex;
+        flex-direction: column;
+        width: 100%; }
+        .cart-items .cart-row .cart-item img {
+          width: 50%;
+          height: 100%;
+          display: block;
+          margin: auto;
+          padding: 0px; }
+        .cart-items .cart-row .cart-item span {
+          width: auto;
+          height: auto;
+          display: block;
+          margin: auto;
+          font-size: 30px;
+          color: #262522;
+          margin-top: 10px;
+          margin-bottom: 10px;
+          padding: 0px;
+          text-align: center; }
+      .cart-items .cart-row span {
+        font-size: 20px;
+        color: #262522;
+        width: 100%;
+        text-align: center; }
+      .cart-items .cart-row .cart-quantity {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-around; }
+
+  .cart-total {
+    width: 100%; } }
