--- a/css/style.scss
+++ b/css/style.scss
@@ -417,6 +417,7 @@ footer {
             width: 200px;
             height: auto;
         }
+    }
 
         .button3 {
             padding: 10px 15px;
@@ -430,7 +431,7 @@ footer {
                 font-size: 25px;
             }
         }
-    }
+    
 
 }
 
@@ -847,7 +848,8 @@ footer {
                 font-weight: 600;
                 font-size: 30px; 
                 color: $black;
-                padding: 25% 20px;
+                padding: 29% 20px;
+                height: 30px;
             }
         }
         
@@ -896,7 +898,7 @@ footer {
     }
 }
 
-.basket_pay {
+.cart-total {
     width: 30%;
     margin-right: 10%;
     margin-left: auto;
@@ -1000,11 +1002,11 @@ margin-bottom: 30px;
             .size {
                 bottom: -20px;
             }
-            
+            }
             .button3 {
                 bottom: -85px;
             }
-        }
+        
     }
     
     .product_grid {
@@ -1049,6 +1051,32 @@ margin-bottom: 30px;
             margin-top: 15px;
         }
         
+    }
+    
+    .cart-items {
+        height: 300px;
+        
+   
+    .cart-row {
+        
+        .cart-item {
+
+            span {
+                width: auto;
+                height: auto;
+                font-family: 'Montserrat', sans-serif;
+                font-weight: 600;
+                font-size: 25px; 
+                color: $black;
+                padding: 25% 20px;
+            }
+            
+           
+        }
+         .cart-price {
+                font-size: 25px;
+            }
+        }
     }
     
 }
@@ -1247,12 +1275,13 @@ width: 100%;
             bottom: -50px;
             right: 0px;
         }
+              }
         
         .button3 {
             bottom: -125px;
             right: 0px;
         }
-    }
+  
     }
     
     
@@ -1277,12 +1306,32 @@ width: 100%;
         width: 100%;
         margin: 15px 0px;
         padding: 0px;
+        height: 250px;
+        
+        .video_border {
+            height: 250px;
+        }
+    }
+    
+    iframe {
+        height: 100%;
     }
     
     .about_text {
         width: 90%;
         margin: auto;
         display: block;
+        
+        .about_border{
+            position: relative;
+            border: none;
+            padding-right: 0px;
+        }
+        
+        .about_border:after {
+            border: none;
+            position: relative;
+        }
         
         div {
             .about_main {
@@ -1299,8 +1348,18 @@ width: 100%;
         width: 90%;
         
         img {
-            width: 50px;
+            width: 40px;
         } 
+        
+        a {
+            font-size: 15px;
+        }
+        
+        .contact_fb {
+            display: block;
+            margin-right: 0px;
+            margin-left: auto;
+        }
     }
     
      .product_page {
@@ -1314,5 +1373,61 @@ width: 100%;
              display: none;
          }
     }
+    
+.cart-items {
+    height: auto;
+    .cart-row {
+        flex-direction: column;
+        justify-content: space-around;
+        width: 100%;
+        align-items: center;
+        .cart-item {
+            display: flex; 
+            flex-direction: column;
+            width: 100%;
+            
+            img {
+                width: 50%;
+                height: 100%;
+                display: block;
+                margin: auto;
+                padding: 0px;
+            }
+            span {
+                width: auto;
+                height: auto;
+                display: block;
+                margin: auto;
+                font-size: 30px; 
+                color: $black;
+                margin-top: 10px;
+                margin-bottom: 10px;
+                padding: 0px;
+                text-align: center;
+            }
+        }
+        
+        span {
+            font-size: 20px;
+            color: $black;
+            width: 100%;
+            text-align: center;
+        }
+        
+        .cart-quantity {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+            justify-content: space-around;
+        }
+            
+    }
+}
+    
+    .cart-total {
+    width: 100%;
+    
+}
+    
     
 }
